# museum_img_searcher

./: .env.example  .gitignore  Dockerfile  pyproject.toml
museum_img_searcher/: adder.py  config.py  main.py  searcher.py
museum_img_searcher/models/: encoder.pth
museum_img_searcher/notebooks/: Hacks_AI.ipynb  hacksai.ipynb
museum_img_searcher/service/: searcher.py
museum_img_searcher/utils/: s3.py
src/museum_img_searcher/: config.py  db.py  main.py
src/museum_img_searcher/domain/: __init__.py  img_vector.py
src/museum_img_searcher/model/: encoderv2.pth
src/museum_img_searcher/notebooks/: Hacks_AI.ipynb  museum-staff-searcher.ipynb
src/museum_img_searcher/service/: __init__.py  adder.py  searcher.py
src/museum_img_searcher/utils/: encoder.py  prepare.py  s3.py
